tests/compile_fail/01-no-debug.rs
use mucodec::ReprBytes;

#[derive(ReprBytes)]
pub struct Empty;

fn main() {
    assert_eq!(Empty.as_bytes(), []);
}
